# groupon-deal-intelligence-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile.ingest  Dockerfile.mcp  LICENSE  README.md  docker-compose.yml  eslint.config.js  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
.github/workflows/: ci.yml
data/: sample-deals.json  smoke-test.json
docs/: ai-usage.md  architecture.md  mcp-vs-cli.md  next-steps.md  trade-offs.md
ingestion/: README.md  pyproject.toml
ingestion/data/: seeds.json
ingestion/scripts/: discover_urls.py  inspect_deal.py  inspect_listing.py
ingestion/src/groupon_ingest/: __init__.py  __main__.py  cli.py  embedder.py  models.py  normalizer.py  scraper.py
ingestion/src/groupon_ingest/parsers/: __init__.py  category_page.py  deal_page.py
scripts/: claude-desktop-config.json  demo.sh  inspect.sh
src/cli/: index.ts
src/cli/commands/: analyze.ts  categories.ts  category.ts  compare.ts  deal.ts  doctor.ts  ingest.ts  (+5 more)
src/core/: category.ts  comparison.ts  details.ts  index.ts  market.ts  overview.ts  scoring.ts  search.ts  similarity.ts
src/mcp/: server.ts
src/shared/: config.ts  errors.ts  logger.ts
tests/core/: market.test.ts  scoring.test.ts
tests/mcp/: server.test.ts
web/: .env.example  Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.server.json  vite.config.ts
web/server/: chat.ts  config.ts  deals.ts  index.ts  llm.ts  logger.ts  mcp-client.ts  tools.ts  types.ts
web/src/: App.tsx  main.tsx
web/tests/: setup.ts
(+45 files in other folders)
